Add Type and Status filter

--- a/Kira/Pages/Filter.razor
+++ b/Kira/Pages/Filter.razor
@@ -2,75 +2,168 @@
 @inject IStringLocalizer<Index> L
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-xl-4 mb-4">
-            <RadzenCard>
-                <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">1. Projects</RadzenText>
+    <RadzenCard class="rz-mb-4">
 
-                <RadzenDropDown
-                    @bind-Value=designer.SelectedProjectIds
-                    Data=designer.Projects
-                    TextProperty="Key"
-                    ValueProperty="Id"
-                    AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
-                    Change=@ProjectChangeAsync
-                    Disabled=isLoading
-                    Multiple=true
-                    AllowClear=true
-                    AllowSelectAll="false"
-                    Chips=true
-                    Placeholder="Select projects"
-                    Style="width: 100%; max-width: 400px;">
-                    <Template>
-                        <RadzenImage Path="@(((ProjectModel)context).Avatar)" style="width: 32px; height: 32px; border-radius: 16px; margin: 0; padding: 0;"/>
-                        @(((ProjectModel)context).Key)
-                    </Template>
-                </RadzenDropDown>
-            </RadzenCard>
+        <div class="row">
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">1. Projects</RadzenText>
+
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedProjectIds
+                        Data=designer.Projects
+                        TextProperty="Key"
+                        ValueProperty="Id"
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Change=@ProjectChangeAsync
+                        Disabled=isLoading
+                        Multiple=true
+                        AllowClear=true
+                        AllowSelectAll="false"
+                        Chips=true
+                        Placeholder="Select projects"
+                        Style="width: 100%; max-width: 400px;">
+                        <Template>
+                            <RadzenImage Path="@(((ProjectModel)context).Avatar)" style="width: 32px; height: 32px; border-radius: 16px; margin: 0; padding: 0;"/>
+                            @(((ProjectModel)context).Key)
+                        </Template>
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
+
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">2. Include Components</RadzenText>
+
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedIncludedComponentIds
+                        Data=designer.IncludedComponents
+                        TextProperty="Name"
+                        ValueProperty="Id"
+                        DisabledProperty="Disabled"
+                        Change=@(args => ComponentChangeAsync(Designer.DropDownListType.Included, args))
+                        Disabled=@(isLoading || !designer.IncludedComponents.Any())
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Multiple=true
+                        AllowClear=true
+                        Chips=true
+                        Placeholder="Select components"
+                        Style="width: 100%; max-width: 400px;">
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
+
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">3. Exclude Components</RadzenText>
+
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedExcludedComponentIds
+                        Data=designer.ExcludedComponents
+                        TextProperty="Name"
+                        ValueProperty="Id"
+                        DisabledProperty="Disabled"
+                        Change=@(args => ComponentChangeAsync(Designer.DropDownListType.Excluded, args))
+                        Disabled=@(isLoading || !designer.ExcludedComponents.Any())
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Multiple=true
+                        AllowClear=true
+                        Chips=true
+                        Placeholder="Select components"
+                        Style="width: 100%; max-width: 400px;">
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
         </div>
+        <div class="row">
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">4. Included Types</RadzenText>
 
-        <div class="col-xl-4 mb-4">
-            <RadzenCard>
-                <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">2. Include Components</RadzenText>
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedIncludedTypeIds
+                        Data=designer.IncludedTypes
+                        TextProperty="Name"
+                        ValueProperty="Id"
+                        DisabledProperty="Disabled"
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Change=@(args => TypeChangeAsync(Designer.DropDownListType.Included, args))
+                        Disabled=isLoading
+                        Multiple=true
+                        AllowClear=true
+                        AllowSelectAll="false"
+                        Chips=true
+                        Placeholder="Select types"
+                        Style="width: 100%; max-width: 400px;">
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
 
-                <RadzenDropDown
-                    @bind-Value=designer.SelectedIncludedComponentIds
-                    Data=designer.IncludedComponents
-                    TextProperty="Name"
-                    ValueProperty="Id"
-                    DisabledProperty="Disabled"
-                    Change=@(args => ComponentChangeAsync(Designer.Type.Included, (IEnumerable<string>)args))
-                    Disabled=@(isLoading || !designer.IncludedComponents.Any())
-                    AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
-                    Multiple=true
-                    AllowClear=true
-                    Chips=true
-                    Placeholder="Select components"
-                    Style="width: 100%; max-width: 400px;">
-                </RadzenDropDown>
-            </RadzenCard>
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">5. Excluded Types</RadzenText>
+
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedExcludedTypeIds
+                        Data=designer.ExcludedTypes
+                        TextProperty="Name"
+                        ValueProperty="Id"
+                        DisabledProperty="Disabled"
+                        Change=@(args => TypeChangeAsync(Designer.DropDownListType.Excluded, args))
+                        Disabled=@(isLoading || !designer.IncludedComponents.Any())
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Multiple=true
+                        AllowClear=true
+                        Chips=true
+                        Placeholder="Select types"
+                        Style="width: 100%; max-width: 400px;">
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
+
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">6. Included Statues</RadzenText>
+
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedIncludedStatusIds
+                        Data=designer.IncludedStatues
+                        TextProperty="Name"
+                        ValueProperty="Id"
+                        DisabledProperty="Disabled"
+                        Change=@(args => StatusChangeAsync(Designer.DropDownListType.Included, args))
+                        Disabled=@(isLoading || !designer.ExcludedComponents.Any())
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Multiple=true
+                        AllowClear=true
+                        Chips=true
+                        Placeholder="Select statues"
+                        Style="width: 100%; max-width: 400px;">
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
+
+            <div class="col-xl-3 mb-4">
+                <RadzenCard Variant="Variant.Outlined">
+                    <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">7. Excluded Statues</RadzenText>
+
+                    <RadzenDropDown
+                        @bind-Value=designer.SelectedExcludedStatusIds
+                        Data=designer.ExcludedStatues
+                        TextProperty="Name"
+                        ValueProperty="Id"
+                        DisabledProperty="Disabled"
+                        Change=@(args => StatusChangeAsync(Designer.DropDownListType.Excluded, args))
+                        Disabled=@(isLoading || !designer.ExcludedComponents.Any())
+                        AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
+                        Multiple=true
+                        AllowClear=true
+                        Chips=true
+                        Placeholder="Select statues"
+                        Style="width: 100%; max-width: 400px;">
+                    </RadzenDropDown>
+                </RadzenCard>
+            </div>
         </div>
-
-        <div class="col-xl-4 mb-4">
-            <RadzenCard>
-                <RadzenText TextStyle="TextStyle.H6" TagName="TagName.H3">3. Exclude Components</RadzenText>
-
-                <RadzenDropDown
-                    @bind-Value=designer.SelectedExcludedComponentIds
-                    Data=designer.ExcludedComponents
-                    TextProperty="Name"
-                    ValueProperty="Id"
-                    DisabledProperty="Disabled"
-                    Change=@(args => ComponentChangeAsync(Designer.Type.Excluded, (IEnumerable<string>)args))
-                    Disabled=@(isLoading || !designer.ExcludedComponents.Any())
-                    AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
-                    Multiple=true
-                    AllowClear=true
-                    Chips=true
-                    Placeholder="Select components"
-                    Style="width: 100%; max-width: 400px;">
-                </RadzenDropDown>
-            </RadzenCard>
-        </div>
-    </div>
+    </RadzenCard>
 </div>
