--- a/Kira/MainLayout.razor
+++ b/Kira/MainLayout.razor
@@ -27,7 +27,7 @@
     </RadzenBody>
     <RadzenSidebar Expanded="@sidebarExpanded" style="z-index: 2">
         <RadzenStack AlignItems="AlignItems.Center" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding); border-bottom: var(--rz-panel-menu-item-border);">
-            <RadzenImage Path="images/logo.png" style="width: 48px; height: 48px;"></RadzenImage>
+            <RadzenImage Path="images/logo.gif" style="width: 48px; height: 48px; border-radius: 50%"></RadzenImage>
             <RadzenText Text="Kira" TextStyle="TextStyle.Subtitle1" class="rz-mb-0" style="color: var(--rz-sidebar-color);"/>
         </RadzenStack>
         <RadzenPanelMenu>
