--- a/src/Kira/MainLayout.razor
+++ b/src/Kira/MainLayout.razor
@@ -33,6 +33,7 @@
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Path=""/>
             <RadzenPanelMenuItem Text="Workloads" Path="workload"/>
+            <RadzenPanelMenuItem Text="Filter" Path="filter"/>
         </RadzenPanelMenu>
         <RadzenStack AlignItems="AlignItems.Center" Gap="0" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding);">
             <RadzenText Text=@($"Product Data Manager v{Assembly.GetExecutingAssembly().GetName().Version}") TextStyle="TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="TagName.P" TextAlign="TextAlign.Center"/>
