--- a/src/Kira/Pages/FilterForm.razor
+++ b/src/Kira/Pages/FilterForm.razor
@@ -4,7 +4,7 @@
 <RadzenAccordion>
     <Items>
         <RadzenAccordionItem Text="Filter" Icon="search" Selected="true">
-            <RadzenTemplateForm TItem="Designer" Data="@designer" Submit="@OnSubmit" InvalidSubmit="@OnInvalidSubmit">
+            <RadzenTemplateForm TItem="FormModel" Data="@formModel" Submit="@OnSubmit" InvalidSubmit="@OnInvalidSubmit">
                 <RadzenRow Class="rz-p-0" Gap="2rem">
                     <RadzenColumn Size="12" SizeMD="6">
                         <RadzenStack>
@@ -14,11 +14,11 @@
                                         <RadzenColumn Size="12" SizeMD="12">
                                             <RadzenDropDown
                                                 Name="ProjectsDDL"
-                                                @bind-Value=designer.SelectedProjects
-                                                Data=designer.Projects
+                                                @bind-Value=formModel.SelectedProjects
+                                                Data=formModel.Projects
                                                 TextProperty="Key"
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
-                                                Change=@(args => { var selectedProjects = args as IEnumerable<ProjectModel> ?? Enumerable.Empty<ProjectModel>(); return LoadProjectAsync(selectedProjects); })
+                                                Change=@(ProjectChange)
                                                 Disabled=isLoading
                                                 Multiple=true
                                                 AllowClear=true
@@ -26,9 +26,14 @@
                                                 Chips=true
                                                 Placeholder="Select projects"
                                                 Style="width: 100%;">
+                                                <Template Context="project">
+                                                    <RadzenStack AlignItems="AlignItems.Center" Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center">
+                                                        <RadzenImage Path="@((project as ProjectModel)?.Avatar)" Style="width: 24px; height: 24px;"/> @((project as ProjectModel)?.Key)
+                                                    </RadzenStack>
+                                                </Template>
                                             </RadzenDropDown>
-                                            <RadzenCustomValidator Component="ProjectsDDL" Validator="@(() => (designer.SelectedProjects?.Count ?? 0) >= 0)" Text="Select at least one project" Popup=@popup/>
-                                            <RadzenCustomValidator Component="ProjectsDDL" Validator="@(() => (designer.SelectedProjects?.Count ?? 0) <= 3)" Text="Select up to 3 projects" Popup=@popup/>
+                                            <RadzenCustomValidator Component="ProjectsDDL" Validator="@LeftBound" Text="Select at least one project" Popup=@popup/>
+                                            <RadzenCustomValidator Component="ProjectsDDL" Validator="@RightBound" Text="Select up to 3 projects" Popup=@popup/>
                                         </RadzenColumn>
                                     </RadzenRow>
                                 </RadzenStack>
@@ -43,16 +48,17 @@
                                         </RadzenColumn>
                                         <RadzenColumn Size="12" SizeMD="10">
                                             <RadzenDropDown
-                                                @bind-Value=designer.SelectedIncludedComponents
-                                                Data=designer.IncludedComponents
+                                                @bind-Value=formModel.SelectedIncludedComponents
+                                                Data=formModel.IncludedComponents
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
-                                                Change=@(args => ChangeComponent(DropDownListType.Included, args as IEnumerable<ComponentModel>))
-                                                Disabled=@(isLoading || !designer.IncludedComponents.Any())
+                                                Change=@(IncludedComponentsChange)
+                                                Disabled=@(isLoading || !formModel.IncludedComponents.Any())
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                                 Multiple=true
                                                 AllowClear=true
                                                 Chips=true
+                                                AllowSelectAll="false"
                                                 Placeholder="Select components"
                                                 Style="width: 100%;">
                                             </RadzenDropDown>
@@ -64,16 +70,17 @@
                                         </RadzenColumn>
                                         <RadzenColumn Size="12" SizeMD="10">
                                             <RadzenDropDown
-                                                @bind-Value=designer.SelectedExcludedComponents
-                                                Data=designer.ExcludedComponents
+                                                @bind-Value=formModel.SelectedExcludedComponents
+                                                Data=formModel.ExcludedComponents
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
-                                                Change=@(args => ChangeComponent(DropDownListType.Excluded, args as IEnumerable<ComponentModel>))
-                                                Disabled=@(isLoading || !designer.ExcludedComponents.Any())
+                                                Change=@(ExcludedComponentsChange)
+                                                Disabled=@(isLoading || !formModel.ExcludedComponents.Any())
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                                 Multiple=true
                                                 AllowClear=true
                                                 Chips=true
+                                                AllowSelectAll="false"
                                                 Placeholder="Select components"
                                                 Style="width: 100%;">
                                             </RadzenDropDown>
@@ -93,13 +100,13 @@
                                         </RadzenColumn>
                                         <RadzenColumn Size="12" SizeMD="10">
                                             <RadzenDropDown
-                                                @bind-Value=designer.SelectedIncludedTypes
-                                                Data=designer.IncludedTypes
+                                                @bind-Value=formModel.SelectedIncludedTypes
+                                                Data=formModel.IncludedTypes
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
-                                                Change=@(args => ChangeType(DropDownListType.Included, args as IEnumerable<TypeModel>))
-                                                Disabled=isLoading
+                                                Change=@(IncludedTypesChange)
+                                                Disabled=@(isLoading || !formModel.IncludedTypes.Any())
                                                 Multiple=true
                                                 AllowClear=true
                                                 AllowSelectAll="false"
@@ -115,15 +122,16 @@
                                         </RadzenColumn>
                                         <RadzenColumn Size="12" SizeMD="10">
                                             <RadzenDropDown
-                                                @bind-Value=designer.SelectedExcludedTypes
-                                                Data=designer.ExcludedTypes
+                                                @bind-Value=formModel.SelectedExcludedTypes
+                                                Data=formModel.ExcludedTypes
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
-                                                Change=@(args => ChangeType(DropDownListType.Excluded, args as IEnumerable<TypeModel>))
-                                                Disabled=@(isLoading || !designer.IncludedComponents.Any())
+                                                Change=@(ExcludedTypesChange)
+                                                Disabled=@(isLoading || !formModel.ExcludedTypes.Any())
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                                 Multiple=true
                                                 AllowClear=true
+                                                AllowSelectAll="false"
                                                 Chips=true
                                                 Placeholder="Select types"
                                                 Style="width: 100%;">
@@ -142,15 +150,16 @@
                                         </RadzenColumn>
                                         <RadzenColumn Size="12" SizeMD="10">
                                             <RadzenDropDown
-                                                @bind-Value=designer.SelectedIncludedStatues
-                                                Data=designer.IncludedStatues
+                                                @bind-Value=formModel.SelectedIncludedStatues
+                                                Data=formModel.IncludedStatues
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
-                                                Change=@(args => ChangeStatus(DropDownListType.Included, args as IEnumerable<StatusModel>))
-                                                Disabled=@(isLoading || !designer.ExcludedComponents.Any())
+                                                Change=@(IncludedStatuesChange)
+                                                Disabled=@(isLoading || !formModel.ExcludedStatues.Any())
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                                 Multiple=true
                                                 AllowClear=true
+                                                AllowSelectAll="false"
                                                 Chips=true
                                                 Placeholder="Select statues"
                                                 Style="width: 100%;">
@@ -163,15 +172,16 @@
                                         </RadzenColumn>
                                         <RadzenColumn Size="12" SizeMD="10">
                                             <RadzenDropDown
-                                                @bind-Value=designer.SelectedExcludedStatues
-                                                Data=designer.ExcludedStatues
+                                                @bind-Value=formModel.SelectedExcludedStatues
+                                                Data=formModel.ExcludedStatues
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
-                                                Change=@(args => ChangeStatus(DropDownListType.Excluded, args as IEnumerable<StatusModel>))
-                                                Disabled=@(isLoading || !designer.ExcludedComponents.Any())
+                                                Change=@(ExcludedStatuesChange)
+                                                Disabled=@(isLoading || !formModel.ExcludedStatues.Any())
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                                 Multiple=true
                                                 AllowClear=true
+                                                AllowSelectAll="false"
                                                 Chips=true
                                                 Placeholder="Select statues"
                                                 Style="width: 100%;">
@@ -188,16 +198,16 @@
                         <RadzenCheckBox TriState="false" @bind-Value="popup" Name="PopUp"/>
                         <RadzenLabel Text="Popup" Component="Popup" Style="margin-left: 8px; vertical-align: middle;"/>
                     </div>
-                    <RadzenButton Disabled="@DisableSearch" ButtonType="ButtonType.Submit" Size="ButtonSize.Large" ButtonStyle="ButtonStyle.Primary" Shade="Shade.Lighter" Variant="Variant.Outlined" Icon="search" Text="Search"/>
+                    <RadzenButton Disabled="@(isLoading || !LeftBound() || !RightBound())" ButtonType="ButtonType.Submit" Size="ButtonSize.Large" ButtonStyle="ButtonStyle.Primary" Shade="Shade.Lighter" Variant="Variant.Outlined" Icon="search" Text="Search"/>
                 </RadzenStack>
-                <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.SpaceBetween" Class="rz-mt-2 rz-mb-2">
+                <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End" Class="rz-mt-2 rz-mb-2">
                     @if (isLoading)
                     {
-                        <RadzenBadge Variant="Variant.Outlined" Shade="Shade.Darker" BadgeStyle="BadgeStyle.Warning" IsPill="true" Text="Loading ..." class="rz-ml-2"/>
+                        <RadzenBadge Variant="Variant.Outlined" Shade="Shade.Light" BadgeStyle="BadgeStyle.Warning" IsPill="true" Text="Loading ..." class="rz-ml-2"/>
                     }
                     else
                     {
-                        <RadzenBadge Variant="Variant.Outlined" Shade="Shade.Darker" BadgeStyle="BadgeStyle.Success" IsPill="true" Text="Loaded" class="rz-ml-2"/>
+                        <RadzenBadge Variant="Variant.Outlined" Shade="Shade.Light" BadgeStyle="BadgeStyle.Success" IsPill="true" Text="Loaded" class="rz-ml-2"/>
                     }
                 </RadzenStack>
             </RadzenTemplateForm>
