--- a/src/Kira/MainLayout.razor
+++ b/src/Kira/MainLayout.razor
@@ -32,7 +32,7 @@
         </RadzenStack>
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Path=""/>
-            <RadzenPanelMenuItem Text="Workloads" Path="workload"/>
+            <RadzenPanelMenuItem Text="Workloads" Path="workloads"/>
             <RadzenPanelMenuItem Text="Filter" Path="filter"/>
         </RadzenPanelMenu>
         <RadzenStack AlignItems="AlignItems.Center" Gap="0" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding);">
