--- a/src/Kira/Pages/Filter.razor
+++ b/src/Kira/Pages/Filter.razor
@@ -155,7 +155,7 @@
                                                 TextProperty="Name"
                                                 DisabledProperty="Disabled"
                                                 Change=@(IncludedStatuesChange)
-                                                Disabled=@(isLoading || !formModel.ExcludedStatues.Any())
+                                                Disabled=@(isLoading || !formModel.IncludedStatues.Any())
                                                 AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                                 Multiple=true
                                                 AllowClear=true
