--- a/src/Kira/Pages/Workload.razor
+++ b/src/Kira/Pages/Workload.razor
@@ -17,7 +17,8 @@
                     AllowPaging="false"
                     AllowSorting="true"
                     GroupRowRender="OnGroupRowRender"
-                    Render="@OnRender">
+                    Render="@OnRender"
+                    style="height: 80vh">
         <HeaderTemplate>
             <RadzenRow Style="width: 100%">
                 <RadzenColumn Size="12" SizeMD="12">
