--- a/src/Kira/Pages/Workloads.razor
+++ b/src/Kira/Pages/Workloads.razor
@@ -2,6 +2,7 @@
 @using Kira.Extensions
 @using Kira.Infrastructure.Options
 @using Microsoft.Extensions.Options
+@using Kira.Builders
 @inject IOptions<JiraOptions> Options;
 
 <Filter Query=Query QueryChanged=QueryChanged></Filter>
